Promena za promenom

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Prva nasa promena!</h1>
+    <h1>Prva nasa promena! 123</h1>
 </body>
 </html>
